fix: menu margin and align fix

--- a/src/styles/menu.module.scss
+++ b/src/styles/menu.module.scss
@@ -21,11 +21,13 @@ $slidein: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
   @include flexCenter(flex-end);
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
+  // left: 0;
+  width: 100%;
   height: 100vh;
-  padding: 0.56rem 2rem;
-  padding-right: calc(2rem + 15px);
+  padding: 0.56rem 4rem;
+  max-width: 1800px;
+  // margin: 0 auto;
+  // padding-right: calc(2rem + 15px);
   background-color: (var(--background-light));
   transition: background-color 0.3s ease;
 
